Minor update to 0072

--- a/0072-2023-05-02.md
+++ b/0072-2023-05-02.md
@@ -12,12 +12,20 @@
     *   Changed [lock overrides and added momentary (one-shot) option](https://github.com/algofoogle/raybox/commit/59824d831c260424fecd22bf27b7558be5484a4d#diff-2f1666fc46c35f596afa85eb039f8cbd5f9132cffdff39fbab1c5952dd393317R260-R273).
     *   Started [adding design inspection to On-Screen Display](https://github.com/algofoogle/raybox/commit/59824d831c260424fecd22bf27b7558be5484a4d#diff-2f1666fc46c35f596afa85eb039f8cbd5f9132cffdff39fbab1c5952dd393317R677-R678).
 
+## Issues
+
+*   Can't get the design to work properly on DE0-Nano. Is it a timing issue or synthesis difference?
+    Maybe need to find out what simulation/verification tools we can use with Quartus.
+*   `lzc` could be an issue for Quartus; huge series of `if()` statements might perform badly compared
+    to `casez`. I've decreased the bit depth from 32 (Q16.16) to 24 (Q12.12) so I would expect it to
+    improve overall. Maybe try going back up to Q16.16, and otherwise try a git-bisect.
+
 ## What next?
 
 *   Need to see how lower FP precision goes when we bring in rotations of the camera. In that case,
     stepping the viewplane might not go so well, or might not need to be a clean /512 or /1024 step.
 *   Put FPS counter in sim main window.
-*   Add option for text in 
+*   Add option for basic text that the design can render.
 *   Create a model for loading the initial state of the "game" into the design, e.g.
     player position and direction, movement speed, and maybe more dynamic parameters later.
     Can we make it asynchronous? Should we make the "host" do it following a frame "tick"?
