--- a/0078-2023-05-10.md
+++ b/0078-2023-05-10.md
@@ -4,8 +4,17 @@
 
 ## Accomplishments
 
-*   Textures can be loaded from PNG in sim.
+![Raybox showing texture-mapped walls](./i/0078-raybox-wall-tex.png)
+
 *   Textures work in sim, but need proper maths logic.
+*   Textures can be loaded from PNG in sim.
+    *   Source texture file is just one wall design (128x64, light and dark sides),
+        ripped from Wolf3D for now, converted to 2 bits per channel (RGB222),
+        but still saved as a 24-bit PNG:
+
+        ![Wolf3D blue stone wall texture in RGB222](./i/0078-blue-wall.png)
+    *   Texture gets loaded by the sim directly injecting its RGB222 data into the design via Verilator.
+
 
 ## What to do today?
 
@@ -23,6 +32,7 @@
 
 ## Next steps
 
+*   Support for 128x128 textures might be in order when doing 640x480 resolution. There's a [thread about this](https://forum.zdoom.org/viewtopic.php?t=48769&start=90).
 *   Need to work on fixing height calculation and support a height of at least 511 (9-bit, or 10 inc. sign).
 *   Change logic to get rid of false divide in `raybox`.
 *   Think about how to make RAM access fast enough.
