Update on 0077 about roadmap

--- a/0077-2023-05-09.md
+++ b/0077-2023-05-09.md
@@ -6,6 +6,30 @@
 
 *   Got the sim building on Windows. Involves a little mucking around.
 *   Got mouse rotation working (in Windows only; Linux might be having a pointer problem due to VirtualBox virtual pointer), and in combination with WASD it feels a bit more like a real FPS now!
+*   Started working on code that will lead to wall textures.
+
+## Stuff I would expect to sort out before calling this Version 1
+
+In order of priority, I think:
+
+*   Build for Caravel
+*   Loading a map. Can't really have a game without it.
+*   Sprites -- could include screen overlays/artwork
+*   Textures
+*   Full screen width and FOV fix
+*   Doors
+*   Different wall IDs
+*   Collisions, but this is possibly for the host controller to worry about
+*   Testing the FPGA with an external host controller
+    (e.g. Arduino, maybe needs to be STM32, ESP8266, or ESP32 for 3.3V?)
+
+## Stuff I'd LIKE to do
+
+*   Use an Arduino to interface with a keyboard and mouse (perhaps just PS/2 for now) and
+    use the Arduino to try driving the FPGA; test direct vectors control in hardware, inc.
+    crossing clock domains.
+*   Build a VGA DAC, at least 3-3-3 bit depth.
+*   Clean up FSM.
 
 ## Notes
 
