--- a/0078-2023-05-10.md
+++ b/0078-2023-05-10.md
@@ -61,6 +61,11 @@
             64*sqrt(2), i.e. 91 (always positive) so if we assume it needs up to 9 fractional bits, and up to 7 integer bits,
             then it's a 16-bit fixed-point number (without sign). Note that 0 would mean an error.
             This is **double** what we're currently storing.
+            *   Given the logarithmic nature of the distance (i.e. things that are close need lots of precision,
+                while distant things do not because the wall heights and hence textures basically all flatten out)
+                we could get away with maybe using some floating-point-like value. For instance, we know the
+                column height range is 1..511, but the closer we are to 1, the exponentially bigger our
+                distance value is getting.
         *   Side is 1 bit.
         *   Texture column number is either 6 or 7 bits, depending on whether we want a 64x64 or 128x128 texture.
             Latter would be better for 640x480 VGA.
