0079: Raybox improved column rendering/scaling

--- a/0078-2023-05-10.md
+++ b/0078-2023-05-10.md
@@ -13,7 +13,7 @@
         but still saved as a 24-bit PNG:
 
         ![Wolf3D blue stone wall texture in RGB222](./i/0078-blue-wall.png)
-    *   Texture gets loaded by the sim directly injecting its RGB222 data into the design via Verilator.
+    *   Texture gets loaded by the sim [directly injecting its RGB222 data into the design via Verilator](https://github.com/algofoogle/raybox/blob/6fa212bc6fa44e73facd38f9f0b3247929ef2235/sim/sim_main.cpp#L528-L529).
 
 
 ## What to do today?
