0084: Merged Raybox sprites branch. Notes on OpenLane

--- a/0082-2023-05-22.md
+++ b/0082-2023-05-22.md
@@ -14,7 +14,7 @@
 
 ## Next
 
-*   Make RGB222 VGA plug, and optionally a big adapter that works for DE0-Nano
+*   Use KiCad to design a RGB222 VGA plug, and optionally a big adapter that works for DE0-Nano
     (and could allow it to interface with an ISA card).
 *   Try changing map to 32x32; give the tracer a workout.
 *   Add extra wall IDs to the map.
