--- a/0083-2023-05-23.md
+++ b/0083-2023-05-23.md
@@ -94,7 +94,7 @@ Meanwhile, I'm going to try inspecting my above failed run with the OpenROAD GUI
     2.  Edit `Makefile`
     3.  Add this line below the existing `DOCKER_OPTIONS` line:
         ```
-        DOCKER_OPTIONS += --privileged`
+        DOCKER_OPTIONS += --privileged
         ```
 2.  Run `make mount`
 3.  Find the failed OpenLane run (in `designs/raybox/runs`)
