0085: Raybox 64x64 map with multiple wall types supported

--- a/0084-2023-05-24.md
+++ b/0084-2023-05-24.md
@@ -24,6 +24,7 @@
     *   Check utilisation also in Quartus; beware multiplier blocks!
     *   Need to also check timing, inc. both FPGA reports and OpenSTA.
 *   Consider modularising some blocks and hardening them independently. Might help speed up optimisation/hardening, and get a better fit.
+    Should also make code more readable and configurable, e.g. have a specific sprite rendering module.
 *   Find out how to define actual RAM blocks
 *   Learn OpenRAM
 *   Test whether Q16.16 or even just Q12.16 gives better texture stability.
