0092: STM32 vs Raspberry Pi Pico

--- a/0088-2023-05-28.md
+++ b/0088-2023-05-28.md
@@ -9,3 +9,11 @@
 *   Learn more about [Horner's method](https://en.wikipedia.org/wiki/Horner%27s_method).
 *   If we do want to store our trace distances (or heights) as something like floating-point,
     consider [this](https://digitalsystemdesign.in/fixed-point-to-floating-point-conversion/).
+*   Can optionally disable KLayout steps to improve OpenLane synth speed a bit:
+    ```json
+    "RUN_KLAYOUT_XOR": 0,
+    "RUN_KLAYOUT_DRC": 0,
+    ```
+*   I should try newer versions of OpenLane.
+*   How to get/use the HS cells?
+*   `python3 run_designs.py raybox_reciprocal --regression designs/raybox_reciprocal/config.txt --threads 4`
