0094: Pi Pico to DE0-Nano pin mapping

--- a/0093-2023-06-09.md
+++ b/0093-2023-06-09.md
@@ -145,6 +145,9 @@ I'll do this under my Linux VM first.
 
 ## Output from `make pico_hello`
 
+<details>
+<summary>Click <strong>here</strong> to show the log</summary>
+
 ```
 Scanning dependencies of target bs2_default
 [  1%] Building ASM object pico-sdk/src/rp2_common/boot_stage2/CMakeFiles/bs2_default.dir/compile_time_choice.S.obj
@@ -258,3 +261,4 @@ Scanning dependencies of target pico_hello
 [100%] Linking CXX executable pico_hello.elf
 [100%] Built target pico_hello
 ```
+</details>
